--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,134 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+::-webkit-scrollbar {
+  display: none; /* Ocultar completamente la barra de desplazamiento */
+}
+
+/* Navbar */
+.Navbar {
+  margin-top: 0.5em;
+  position: relative;
+}
+
+.Navbar .Home {
+  color: white;
+}
+
+.Navbar .Back {
+  margin-top: 1em;
+  position: absolute;
+  left: 0;
+  color: white;
+}
+
+/* Search bar */
+.SearchBar {
+  margin-top: 0.625em;
+  width: 50%;
+}
+
+/* Home page */
+.CardContainer {
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 1em;
+}
+
+/* Card */
+.RestaurantCard {
+  font-size: 20px;
+  width: 17em;
+  height: 11em;
+}
+
+.RestaurantCard .ant-card-body {
+  padding: 1em;
+}
+
+.RestaurantCard .ant-card-cover img {
+  font-size: 20px;
+  height: 8em;
+  object-fit: cover;
+}
+
+/* Restaurant page */
+.RestaurantPage h2 {
+  margin-top: 0.5em;
+  margin-bottom: 0;
+}
+
+.RestaurantPage .Contact {
+  margin-top: 0.5em;
+}
+
+.RestaurantPage .SelectContainer {
+  width: 100%;
+  background-color: rgba(245, 245, 245, 255);
+  position: sticky;
+  top: 0em;
+  z-index: 1000;
+}
+.RestaurantPage .SelectSection {
+  width: 15em;
+  margin-top: 1em;
+}
+
+.RestaurantPage .SelectSection .ant-select-selector {
+  background: transparent !important;
+  border: none;
+  margin-right: 1em;
+}
+
+.RestaurantPage .SelectSection .ant-select-selector span {
+  font-size: 16px;
+  color: black;
+  border-bottom: 1px solid lightgrey;
+}
+
+.ant-select-item-option-content {
+  font-size: 16px;
+}
+
+/* Menu Section */
+.MenuSection {
+  justify-items: start;
+  width: 80%;
+}
+
+.MenuSection .ListItems {
+  width: 100%;
+  text-align: left;
+}
+
+.MenuSection .ListItems .ant-list-item {
+  height: 3.2em;
+}
+
+.MenuSection .ListItems .ant-list-item .ant-list-item-meta-title a {
+  font-size: 14px;
+  font-weight: normal;
+}
+
+/* ItemDetail */
+.ItemDetails .ItemDescription,
+.ItemDetails .Extras {
+  margin-top: 1em;
+}
+
+.ItemDetails .Allergens img {
+  margin-top: 1em;
+  width: 3em;
+}
+
+/* Small devices */
+@media only screen and (max-width: 600px) {
+}
+
+/* Medium devices */
+@media only screen and (min-width: 600px) and (max-width: 1024px) {
 }
