--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,13 @@
   font-size: 16px;
 }
 
+.RestaurantPage .SectionContainer {
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 1em;
+  width: 100%;
+}
+
 /* Menu Section */
 .MenuSection {
   justify-items: start;
