--- a/src/index.css
+++ b/src/index.css
@@ -143,6 +143,10 @@
   width: 4em;
 }
 
+.ant-image-preview-operations-operation {
+  display: none;
+}
+
 /* Small devices */
 @media only screen and (max-width: 600px) {
 }
