Added phone and address functionalities

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,6 @@
 
 /* Restaurant page */
 .RestaurantPage .Info {
-  margin-left: 1em;
   background: none;
   border: none;
 }
@@ -70,6 +69,10 @@
 
 .RestaurantPage .Contact {
   margin-top: 0.5em;
+}
+
+.RestaurantPage .Contact a {
+  color: black;
 }
 
 .RestaurantPage .SelectContainer {
