--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
-@import "./global";
-@import "./navbar";
-@import "./restaurant_card";
-@import "./restaurant_page";
-@import "./menu_section";
-@import "./item_details";
-@import "./cart";
+@use "./global";
+@use "./navbar";
+@use "./restaurant_card";
+@use "./restaurant_page";
+@use "./menu_section";
+@use "./item_details";
+@use "./cart";
