--- a/src/styles/item_details.scss
+++ b/src/styles/item_details.scss
@@ -9,8 +9,12 @@
     margin: 1em 0 1em 0;
   }
 
-  .Allergens img {
-    width: 4em;
+  .Allergens {
+    justify-content: center;
+    flex-wrap: wrap;
+    img {
+      width: 4em;
+    }
   }
 }
 
