--- a/src/styles/menu_section.scss
+++ b/src/styles/menu_section.scss
@@ -12,7 +12,7 @@
     }
 
     .ant-list-item {
-      height: 3.2em;
+      height: auto;
 
       .ant-list-item-meta-title a {
         font-size: 14px;
