--- a/src/styles/restaurant_page.scss
+++ b/src/styles/restaurant_page.scss
@@ -32,7 +32,7 @@
     .SectionContainer {
       flex-wrap: wrap;
       justify-content: center;
-      margin: 1em;
+      margin-top: 1em;
       width: 100%;
     }
   }
