Added allergens filter

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -22,6 +22,10 @@
   margin: 1em;
 }
 
+.ant-message {
+  z-index: 50000 !important;
+}
+
 /* Small devices */
 @media only screen and (max-width: 600px) {
 }
