--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @use "./navbar";
 @use "./restaurant_card";
 @use "./restaurant_page";
-@use "./menu_section";
+@use "./sections";
 @use "./item_details";
 @use "./cart";
+@use "./alergens_filter";
