--- a/src/styles/sections.scss
+++ b/src/styles/sections.scss
@@ -24,6 +24,10 @@
         font-size: 12px;
         font-weight: normal;
       }
+
+      .ant-list-item-action .ant-btn {
+        background-color: transparent;
+      }
     }
   }
 }
