--- a/src/styles/restaurant_page.scss
+++ b/src/styles/restaurant_page.scss
@@ -48,7 +48,7 @@
     background-color: rgba(245, 245, 245, 255);
     position: sticky;
     top: 0em;
-    // z-index: 1000;
+    z-index: 1000;
 
     .FilterFood {
       background: none;
