Show item details in list

--- a/src/styles/sections.scss
+++ b/src/styles/sections.scss
@@ -15,7 +15,7 @@
     .ant-list-item {
       height: auto;
 
-      .ant-list-item-meta-title a {
+      .ant-list-item-meta-title {
         font-size: 14px;
         font-weight: normal;
       }
